Bugfix: Chrome gap between form elements due to line break before description span tag

--- a/frontends/default/stylesheets/stylesheet.css
+++ b/frontends/default/stylesheets/stylesheet.css
@@ -653,6 +653,7 @@ margin: 0;
 
 
 .active-scaffold .description {
+display: inline-block;
 color: #999;
 font-size: 10px;
 margin-left: 5px;
